# computer-graphics-lab-1

./: .gitignore  .gitmodules  CMakeLists.txt
libs/: CMakeLists.txt
src/: collider.cpp  collider.h  component.h  drawable.h  drawable_components.h  engine.cpp  engine.h  main.cpp  object.h  object_colliders.h  utils.h
